fix(select): align select value

--- a/src/shared/select/select-control/select-control.scss
+++ b/src/shared/select/select-control/select-control.scss
@@ -5,20 +5,33 @@
 
 .select-control {
     position: relative;
-    @include select.select-control-size(variables.$tag-height-md, variables.$select-control-padding-y-default);
+    @include select.select-control-size(
+        variables.$tag-height-md,
+        variables.$select-control-padding-y-default,
+        variables.$select-control-height-default
+    );
     padding-right: 23px;
-    &.form-control-custom {
-        padding-top: 0;
-        padding-bottom: 0;
-    }
+
     &.form-control-sm {
-        @include select.select-control-size(variables.$tag-height-sm, variables.$select-control-padding-y-sm);
+        @include select.select-control-size(
+            variables.$tag-height-sm,
+            variables.$select-control-padding-y-sm,
+            variables.$select-control-height-sm
+        );
     }
     &.form-control-md {
-        @include select.select-control-size(variables.$tag-height-md, variables.$select-control-padding-y-md);
+        @include select.select-control-size(
+            variables.$tag-height-md,
+            variables.$select-control-padding-y-md,
+            variables.$select-control-height-md
+        );
     }
     &.form-control-lg {
-        @include select.select-control-size(variables.$tag-height-lg, variables.$select-control-padding-y-lg);
+        @include select.select-control-size(
+            variables.$tag-height-lg,
+            variables.$select-control-padding-y-lg,
+            variables.$select-control-height-lg
+        );
     }
     .search-input-field {
         width: 100%;
@@ -87,6 +100,8 @@
         width: auto;
         max-width: 100%;
         padding: 0;
+        height: inherit;
+        line-height: inherit;
         .search-input-field {
             width: 1px;
             max-width: 100%;
@@ -100,9 +115,6 @@
         cursor: default;
         &.disabled {
             color: variables.$gray-600;
-        }
-        &.thy-tag-sm {
-            margin-top: 1px;
         }
         .thy-icon-close {
             cursor: pointer;
